[package]
name = "rust_pl_stresstest"
version = "0.1.0"
authors = ["Jaeyong Choi <jayong93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.5.0", features=["unstable", "attributes"]}
rand = "0.7.2"
lazy_static = "1.4.0"
ggez = "*"
structopt = "0.3.2"
evmap = "9.0.0"
num = "*"
num-derive = "*"
num-traits = "*"