[package]
name = "rust_pl_stresstest"
version = "0.1.0"
authors = ["Jaeyong Choi <jayong93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.3.*", features=["rt", "rt-multi-thread", "io-util", "net", "time", "macros", "sync"]}
rand = "0.7.2"
lazy_static = "1.4.0"
structopt = "0.3.2"
evmap = "9.0.0"
num = "*"
num-derive = "*"
num-traits = "*"
tui = {version="0.9.1", default-features = false, features=["crossterm"]}
crossterm = "0.17.3"
anyhow = "1.0.28"
